--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+===== 0.4.0 =====
+20230531
+
+* 游戏界面优化：
+    * 更好的球桌画面
+    * 统一背景色
+    * 白球打点十字辅助线
+    * 使键盘WASD在有遮挡的时候仍可以向好的方向调整白球打点
+* 实装了库边弹性造成的非完美反弹
+* 碰普通的库之后产生旋转
+* 新增了几种球桌和球的尺寸
+* 似乎修复了两颗球碰撞时有概率粘在一起的bug：
+    * 其实是转移给了新bug：有概率弹错方向
+
 ===== 0.3.6.2 =====
 20230530
 
