--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -333,6 +333,8 @@ sidePocket=American Side Pocket
 
 snookerBall=Snooker Ball
 poolBall=Pool Ball
+caromBall=Carom Ball
+russianBall=Russian Ball
 
 clothGoodnessExcellent=Excellent
 clothGoodnessGood=Good
@@ -351,9 +353,13 @@ right=Right
 sexM=M
 sexF=F
 
-snookerTable=Snooker
-chineseEightTable=Chinese Eight-Ball
-sidePocketTable=Side Pocket
+snookerTable=Snooker 12'
+chineseEightTable=Chinese Eight-Ball 9'
+poolTable10=Oversized Table 10'
+sidePocketTable=Pool Table 9'
+poolTable8=Home Table 8'
+poolTable7=Bar Box 7'
+poolTable6=Smaller Bar Box 6'
 pocketHuge=Huge
 pocketLarge=Large
 pocketStd=Standard
