--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -333,6 +333,8 @@ sidePocket=美式九球
 
 snookerBall=斯诺克球
 poolBall=撞球
+caromBall=开仑台球
+russianBall=俄式台球
 
 clothGoodnessExcellent=极佳
 clothGoodnessGood=优质
@@ -351,9 +353,13 @@ right=右
 sexM=男
 sexF=女
 
-snookerTable=斯诺克台
-chineseEightTable=中式八球台
-sidePocketTable=美式九球台
+snookerTable=斯诺克台 12'
+chineseEightTable=中式八球台 9'
+poolTable10=大号九球台 10'
+sidePocketTable=美式九球台 9'
+poolTable8=家用球桌 8'
+poolTable7=酒吧球桌 7'
+poolTable6=小号酒吧球桌 6'
 pocketHuge=特大
 pocketLarge=加大
 pocketStd=标准
