--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ===== 0.4.0 =====
-20230531
+20230601
 
 * 游戏界面优化：
     * 更好的球桌画面
@@ -11,6 +11,7 @@
 * 新增了几种球桌和球的尺寸
 * 似乎修复了两颗球碰撞时有概率粘在一起的bug：
     * 其实是转移给了新bug：有概率弹错方向
+* 其他小幅度物理调整
 
 ===== 0.3.6.2 =====
 20230530
