--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -169,7 +169,7 @@ breakLoseChanceDes=仅有%d颗目标球进袋，%d球次过线
 cumulatedLoseChance=累计失机：%d次。累计失机3次将判负一局。
 illegalBreak=开球违例
 breakFoulDes=仅有%d颗球碰边
-
+flyOutTable=有球飞出台面
 targetXHitYNumbered=目标球为%d号球，但击打了%d号球
 
 challengeSuccess=挑战成功！
