--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,24 @@
 ===== 0.4.0 =====
-20230601
+20230602
 
 * 游戏界面优化：
     * 更好的球桌画面
     * 统一背景色
     * 白球打点十字辅助线
     * 使键盘WASD在有遮挡的时候仍可以向好的方向调整白球打点
-* 实装了库边弹性造成的非完美反弹
-* 碰普通的库之后产生旋转
+    * 修复了由于帧率导致出杆鬼畜乱拐的问题
+* 渲染速度优化：
+    * 在球桌画面未改变时避免重复渲染
+* 物理效果更新：
+    * 实装了库边弹性造成的非完美反弹
+    * 碰普通的库之后产生旋转
+    * 重写了两球碰撞的代码：
+        * 替换为线性空间换底
+        * 修改了判定准确碰撞点的代码
+        * 似乎修复了两颗球碰撞时有概率粘在一起的bug
+    * 略微优化了边库和底库的反弹效果
 * 新增了几种球桌和球的尺寸
-* 似乎修复了两颗球碰撞时有概率粘在一起的bug：
-    * 其实是转移给了新bug：有概率弹错方向
+* 放弃了采用不同的物理时间来优化性能的机制：bug难以修复
 * 其他小幅度物理调整
 
 ===== 0.3.6.2 =====
