--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -169,7 +169,7 @@ breakLoseChanceDes=Only %d balls potted, %d ball-times across the break line
 cumulatedLoseChance=Cumulative loss of chance: %d. Player loses a frame after 3 cumulated loss of chances.
 illegalBreak=Illegal break
 breakFoulDes=Only %d balls touch cushion
-
+flyOutTable=Ball out of table
 targetXHitYNumbered=Target is number %s, but number %s hit
 
 challengeSuccess=挑战成功！
