--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ===== 0.4.0 =====
-20230602
+20230603
 
 * 游戏界面优化：
     * 更好的球桌画面
@@ -23,6 +23,8 @@
         * 修改了判定准确碰撞点的代码
         * 似乎修复了两颗球碰撞时有概率粘在一起的bug
     * 略微优化了边库和底库的反弹效果
+* 生涯模式经验更新：
+    * 需手动升级，升级时随机获取技能点
 * Robustness更新：
     * 飞出台面的判定
     * 物理运算卡死后跳过动画
