--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -232,6 +232,13 @@ sponsor=Sponsor
 tournamentHighest=Highest break
 careerChallenges=Challenges
 careerChallenge=Challenge
+levelUp=Level Up
+levelUped=Level Up
+clickToRandomPerk=点击抽取奖励
+clickToRandomPerk2=抽奖
+cancelPerk=不求jb要了！
+levelUpPerkCongrat=Congratulations! You got %s perks!
+levelUpDes=分配你的天赋吧！
 
 # Rank enums
 champion=Champion
