--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -232,6 +232,13 @@ sponsor=赞助商
 tournamentHighest=赛事单杆最高
 careerChallenges=球形挑战
 careerChallenge=挑战
+levelUp=升级
+levelUped=升级
+clickToRandomPerk=点击抽取奖励
+clickToRandomPerk2=抽奖
+cancelPerk=不求jb要了！
+levelUpPerkCongrat=恭喜！你获得了：技能点x%s
+levelUpDes=分配你的天赋吧！
 
 # Rank enums
 champion=冠军
