--- a/changelog.txt
+++ b/changelog.txt
@@ -3,15 +3,22 @@
 
 * 动画优化：
     * 在物理运算的同时开始播放运杆动画，消除视觉上的延迟
-* 优化了生涯模式升级抽奖的界面
+* 界面优化：
+    * 优化了生涯模式升级抽奖的界面
+    * 加入了斯诺克Possible break的显示
+* 生涯模式加入直接退赛的选项
+* 加入预设球桌
 * 小幅度视觉及物理效果调整
+* 略微加大了中袋的宽容度（提高中袋袋口弧线的半径）
 * bug修复：
     * 修复了AI预测球路时可能移动目标球的问题
     * 修复了大力灌袋球会飞出台面的bug
     * 修复了出杆动画结束前运动就结束的情况下，杆不会消失，甚至因为触发架杆判定而报错的问题
-    * 记录界面中玩家总记录百分比错误
+    * 记录界面中玩家总记录百分比显示错误
     * 修复了九球认输报错的问题
     * 修复了比赛中，开始下一局之后，第一次点击鼠标之前画面不刷新的问题
+    * 修复了回放中自动播放没用的问题
+    * 似乎修复了回放列表有时打不开的问题
 
 ===== 0.4.0 =====
 20230603
