--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -82,6 +82,8 @@ trainingChallenge=Challenge
 ruleTableBall=Rule/Table/Ball
 totalFrames=Total Frames
 nylonCloth=Nylon/Cloth
+tablePreset=Table preset
+tableCustom=Custom
 holes=Pockets
 devMode=Dev mode
 startGame=Start Game
@@ -114,6 +116,7 @@ winsAFrame=%s wins a frame.
 winsAMatch=%s wins the match.
 scoreAhead=ahead
 scoreBehind=behind
+possibleBreak=Possible %d
 
 notEndExitWarning=Frame has not end yet, confirm to quit?
 ifStartNextFrame=Start next frame?
@@ -274,6 +277,8 @@ startNextRound=Next round
 rankTitle=Title
 continueMatch=Continue match
 performAllMatches=Perform all
+quitTournament=Quit tournament
+quitTournamentConfirmation=Are you sure to quit?
 undetermined=N/A
 congratSentence=Captures the {rank} of {match}!
 notCongratSentence=Knocked out in the {rank} stage of {match}!
