--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -82,6 +82,8 @@ trainingChallenge=挑战模式
 ruleTableBall=规则/球桌/球
 totalFrames=总局数
 nylonCloth=台尼/桌布
+tablePreset=球桌预设
+tableCustom=自定义
 holes=洞口
 devMode=开发者模式
 startGame=开始游戏
@@ -114,6 +116,7 @@ winsAFrame=%s 赢得一局。
 winsAMatch=%s 胜利。
 scoreAhead=领先
 scoreBehind=落后
+possibleBreak=Possible %d
 
 notEndExitWarning=游戏未结束，是否退出？
 ifStartNextFrame=开始下一局？
@@ -274,6 +277,8 @@ startNextRound=开始下一轮
 rankTitle=头衔
 continueMatch=继续比赛
 performAllMatches=进行所有比赛
+quitTournament=退赛
+quitTournamentConfirmation=确定要退赛？
 undetermined=待定
 congratSentence=获得了{match}的{rank}!
 notCongratSentence=在{match}的{rank}被淘汰！
