--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 ===== 0.4.1 =====
-20230604
+20230605
 
 * 动画优化：
     * 在物理运算的同时开始播放运杆动画，消除视觉上的延迟
@@ -19,6 +19,7 @@
     * 修复了比赛中，开始下一局之后，第一次点击鼠标之前画面不刷新的问题
     * 修复了回放中自动播放没用的问题
     * 似乎修复了回放列表有时打不开的问题
+    * 修复了撞击袋角后旋转完全不减退，导致吸库严重的问题
 
 ===== 0.4.0 =====
 20230603
