--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,17 @@
 ===== 0.4.2 =====
+20230611
 
 * 修改了袋口形状：
     * 更加真实
     * 略微提升了治疗低血压的效果
+* 实装了九球推球的规则
+* 修复了生涯模式赛事结束后退赛键可用的bug
+* 调整了齿轮效应的旋转传递（加入上限），避免鬼畜旋转
+* 调整了旋转的参数
+* 实装了校验功能，但暂未启用
+* 界面优化：
+    * 勾选AI白球划线后立即划线
+    * 生涯模式赛事界面加入是否显示全部比赛的选项
 
 ===== 0.4.1 =====
 20230605
