--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -99,6 +99,7 @@ settingsMenu=Settings
 withdraw=Concede
 replaceBallInHand=Place ball in hand
 letOpponentPlay=Let opponent play
+pushOut=Push out
 playMenu=Play
 replayLastCue=Last cue
 replayNextCue=Next cue
@@ -284,6 +285,7 @@ congratSentence=Captures the {rank} of {match}!
 notCongratSentence=Knocked out in the {rank} stage of {match}!
 congratChampion=Congratulations, %s!
 highestBreaks=Breaks:
+showAllMatches=Show all matches
 
 # Stats UI
 statsMatches=比赛
