--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -99,6 +99,7 @@ settingsMenu=设置
 withdraw=认输
 replaceBallInHand=重新放置手中球
 letOpponentPlay=让杆
+pushOut=推球
 playMenu=播放
 replayLastCue=上一杆
 replayNextCue=下一杆
@@ -284,6 +285,7 @@ congratSentence=获得了{match}的{rank}!
 notCongratSentence=在{match}的{rank}被淘汰！
 congratChampion=恭喜%s!
 highestBreaks=单杆排名:
+showAllMatches=显示全部
 
 # Stats UI
 statsMatches=比赛
