--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+===== 0.4.3 =====
+20230612
+
+* 加入了白球碰撞第二颗球后的轨迹
+* 多线程白球预测
+* AI支持轻打轻k
+* 袋口重力变线调整
+* 补充了进袋的动画（搞笑流）
+* 优化了TableMetrics的代码
+* 微调了随机变线：与球的重量关联
+
 ===== 0.4.2 =====
 20230611
 
