--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -339,6 +339,9 @@ minimumResolution= (Minimum)
 language=Language
 replayCompression=Replay compression
 frameRate=Frame rate limit
+performanceMode=Performance
+performanceLow=Low
+performanceHigh=High
 confirmSaveChanges=
 confirmDiscardChanges=Are you sure to discard changes?
 
