--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -339,6 +339,9 @@ minimumResolution=（最低推荐分辨率）
 language=语言
 replayCompression=游戏录像压缩
 frameRate=帧率上限
+performanceMode=性能模式
+performanceLow=低
+performanceHigh=高
 confirmSaveChanges=
 confirmDiscardChanges=确认要舍弃更改吗？
 
