--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+===== 0.4.3.1 =====
+20230612
+
+* 修复了一个严重影响UI性能的bug：玩家瞄球时每一帧都在重新创建线程池
+* 修复了斯诺克AI开球总是失误的问题
+* 修复了让杆之后对手可以要求复位的bug
+* 生涯模式赛程界面优化：三种显示方式
+* 优化了旋转效果，加强了塞的强度
+* 修复了手中球不能摆在袋角的问题
+
 ===== 0.4.3 =====
 20230612
 
