--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -285,7 +285,10 @@ congratSentence=Captures the {rank} of {match}!
 notCongratSentence=Knocked out in the {rank} stage of {match}!
 congratChampion=Congratulations, %s!
 highestBreaks=Breaks:
-showAllMatches=Show all matches
+showAllMatches=Show complete match schedule
+treeShowingFull=Full schedule
+treeShowingAlive=未淘汰的球员
+treeShowingRemaining=未进行的比赛
 
 # Stats UI
 statsMatches=比赛
