--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -285,7 +285,10 @@ congratSentence=获得了{match}的{rank}!
 notCongratSentence=在{match}的{rank}被淘汰！
 congratChampion=恭喜%s!
 highestBreaks=单杆排名:
-showAllMatches=显示全部
+showAllMatches=显示完整赛程
+treeShowingFull=完整赛程
+treeShowingAlive=未淘汰的球员
+treeShowingRemaining=未进行的比赛
 
 # Stats UI
 statsMatches=比赛
