--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -24,6 +24,7 @@ recordMenu=Records
 replayMenu=Replays
 helpMenu=Help
 aboutMenu=About
+changelogMenu=Changelog
 
 # New Career UI
 difficulty=Difficulty
@@ -236,6 +237,7 @@ sponsor=Sponsor
 tournamentHighest=Highest break
 careerChallenges=Challenges
 careerChallenge=Challenge
+bestScore=Best
 levelUp=Level Up
 levelUped=Level Up
 clickToRandomPerk=点击抽取奖励
