--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -24,6 +24,7 @@ recordMenu=记录
 replayMenu=回放
 helpMenu=帮助
 aboutMenu=关于
+changelogMenu=更新日志
 
 # New Career UI
 difficulty=难度
@@ -236,6 +237,7 @@ sponsor=赞助商
 tournamentHighest=赛事单杆最高
 careerChallenges=球形挑战
 careerChallenge=挑战
+bestScore=最高
 levelUp=升级
 levelUped=升级
 clickToRandomPerk=点击抽取奖励
