--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,3 +1,17 @@
+===== 0.4.4 =====
+20230613
+
+* 运行环境更新:
+    * java 11 -> java 17
+    * javafx 19 -> javafx 20
+    * 对Windows没有影响
+    * 可能兼容了M1/M2芯片的Mac（没试过）
+* 生涯模式挑战更新：
+    * 新增自定义挑战（暂不能由玩家自定义）
+    * 重构了挑战历史记录
+* 新增更新日志查看器
+* 回放界面去窗口化
+
 ===== 0.4.3.1 =====
 20230612
 
