--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -7,6 +7,7 @@ yes=Yes
 no=No
 pleaseConfirm=Please Confirm
 warning=Warning
+window=Window
 close=Close
 confirmExitApp=Quit Game?
 confirmExitAppDes=Your progress will be saved.
@@ -237,6 +238,10 @@ sponsor=Sponsor
 tournamentHighest=Highest break
 careerChallenges=Challenges
 careerChallenge=Challenge
+challengeHistory=History
+historyDateTime=Time
+historyScore=Score/Potted
+historySuccess=Success
 bestScore=Best
 levelUp=Level Up
 levelUped=Level Up
@@ -334,6 +339,7 @@ studioName=Trash software studio
 # Settings UI
 settingsGame=Game
 settingsGeneral=General
+settingsGraphics=Graphics
 fastGameAimLineLength=Fast game aiming line length
 fastGameAiStrength=Fast game AI strength
 numAiThreads=AI threads
@@ -344,9 +350,15 @@ minimumResolution= (Minimum)
 language=Language
 replayCompression=Replay compression
 frameRate=Frame rate limit
-performanceMode=Performance
+antiAliasing=Anti aliasing
+antiAliasingDisabled=Disabled
+antiAliasingBalanced=Balanced
+performanceMode=Prediction Quality
 performanceLow=Low
 performanceHigh=High
+displaySetting=Display
+displayWindowed=Windowed
+displayFullScreen=Full screen
 confirmSaveChanges=
 confirmDiscardChanges=Are you sure to discard changes?
 
