--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -7,6 +7,7 @@ yes=是
 no=否
 pleaseConfirm=请确认
 warning=警告
+window=窗口
 close=关闭
 confirmExitApp=退出游戏？
 confirmExitAppDes=游戏进度将会保存。
@@ -237,6 +238,10 @@ sponsor=赞助商
 tournamentHighest=赛事单杆最高
 careerChallenges=球形挑战
 careerChallenge=挑战
+challengeHistory=挑战历史
+historyDateTime=时间
+historyScore=分数/球数
+historySuccess=完成
 bestScore=最高
 levelUp=升级
 levelUped=升级
@@ -334,6 +339,7 @@ studioName=垃圾软件工作室
 # Settings UI
 settingsGame=游戏
 settingsGeneral=通用
+settingsGraphics=画面
 fastGameAimLineLength=快速游戏瞄准线长度
 fastGameAiStrength=快速游戏AI强度
 numAiThreads=AI线程数
@@ -344,9 +350,15 @@ minimumResolution=（最低推荐分辨率）
 language=语言
 replayCompression=游戏录像压缩
 frameRate=帧率上限
-performanceMode=性能模式
+antiAliasing=抗锯齿
+antiAliasingDisabled=关
+antiAliasingBalanced=平衡
+performanceMode=白球预测质量
 performanceLow=低
 performanceHigh=高
+displaySetting=显示
+displayWindowed=窗口化
+displayFullScreen=全屏
 confirmSaveChanges=
 confirmDiscardChanges=确认要舍弃更改吗？
 
