--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,3 +1,16 @@
+===== 0.4.5 =====
+20230614
+
+* 画面更新：
+    * 全屏模式
+    * 部分内容较多的界面对低分辨率屏幕的优化
+    * 抗锯齿（可在设置中调整）
+    * 取消了手动设置系统缩放的选项
+    * 可调节的白球预测的落点范围顶点数
+* 生涯模式挑战历史记录
+* 小幅物理参数调整
+* 一局一胜的快速游戏如果还没开球就退出，将不记录在数据库与回放内
+
 ===== 0.4.4 =====
 20230613
 
