--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -12,6 +12,8 @@ close=Close
 confirmExitApp=Quit Game?
 confirmExitAppDes=Your progress will be saved.
 backIcon=← Back
+finishAndClose=Exit?
+finishAndCloseHint=You could also close the window manually.
 
 # Entry UI
 career=Player
@@ -354,8 +356,11 @@ antiAliasing=Anti aliasing
 antiAliasingDisabled=Disabled
 antiAliasingBalanced=Balanced
 performanceMode=Prediction Quality
+performanceVeryLow=Very Low
 performanceLow=Low
+performanceMedium=Medium
 performanceHigh=High
+performanceVeryHigh=Very High
 displaySetting=Display
 displayWindowed=Windowed
 displayFullScreen=Full screen
