--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -12,6 +12,8 @@ close=关闭
 confirmExitApp=退出游戏？
 confirmExitAppDes=游戏进度将会保存。
 backIcon=←
+finishAndClose=是否退出？
+finishAndCloseHint=您也可以稍后手动关闭窗口
 
 # Entry UI
 career=玩家
@@ -354,8 +356,11 @@ antiAliasing=抗锯齿
 antiAliasingDisabled=关
 antiAliasingBalanced=平衡
 performanceMode=白球预测质量
+performanceVeryLow=极低
 performanceLow=低
+performanceMedium=中
 performanceHigh=高
+performanceVeryHigh=极高
 displaySetting=显示
 displayWindowed=窗口化
 displayFullScreen=全屏
