--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,5 +1,5 @@
 ===== 0.4.5 =====
-20230614
+20230615
 
 * 画面更新：
     * 全屏模式
@@ -7,10 +7,16 @@
     * 抗锯齿（可在设置中调整）
     * 取消了手动设置系统缩放的选项
     * 可调节的白球预测的落点范围顶点数
+* 用户体验优化：
+    * 手动更改持杆手之后，再次修改击球参数时，不再自动选回惯用手
+    * 一场比赛结束后，询问玩家要不要退出
 * 生涯模式挑战历史记录
 * 小幅物理参数调整
 * 一局一胜的快速游戏如果还没开球就退出，将不记录在数据库与回放内
-* 修复了球杆经常不消失的bug
+* bug修复：
+    * 修复了球杆经常不消失的bug
+    * 修复了斯诺克手动选择目标彩球后，白球预测线不消失的bug
+* 将判断玩家进攻的阈值由7.5°改为5.0°
 
 ===== 0.4.4 =====
 20230613
