--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -7,6 +7,7 @@
     * 抗锯齿（可在设置中调整）
     * 取消了手动设置系统缩放的选项
     * 可调节的白球预测的落点范围顶点数
+    * 放大了白球预测落点范围
 * 用户体验优化：
     * 手动更改持杆手之后，再次修改击球参数时，不再自动选回惯用手
     * 一场比赛结束后，询问玩家要不要退出
@@ -111,7 +112,7 @@
     * 取消了设置内的帧率限制
     * 通过 -Djavafx.animation.fullspeed=true 取消帧率限制
 * 物理效果更新：
-    * 实装了库边弹性造成的非完美反弹
+    * 实装了库边弹性造成的非完美反弹（反射角减小）
     * 实装了袋角对塞的反应
     * 碰普通的库之后产生旋转
     * 重写了两球碰撞的代码：
