--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -258,6 +258,9 @@ levelUpAwardPool=奖励池：%s
 levelUpPerkCongrat=Congratulations! You got %s perks!
 levelUpDes=分配你的天赋吧！
 
+challengeClearance=Clearance
+challengeOverScore=Break %d+
+
 # Rank enums
 champion=Champion
 secondPlace=Second Place
