--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -258,6 +258,9 @@ levelUpAwardPool=可能获得：%s
 levelUpPerkCongrat=恭喜！你获得了：技能点 X %s
 levelUpDes=分配你的天赋吧！
 
+challengeClearance=清台
+challengeOverScore=单杆≥%d分
+
 # Rank enums
 champion=冠军
 secondPlace=亚军
