--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -258,6 +258,14 @@ levelUpAwardPool=奖励池：%s
 levelUpPerkCongrat=Congratulations! You got %s perks!
 levelUpDes=分配你的天赋吧！
 
+achievements=成就
+achievementComplete=成就
+incomplete=未达成
+firstComplete=首次达成
+firstCompleteDate=首次达成日期：%s
+completeTimes=达成次数: %d
+totalCount=总计：%d 个成就
+
 challengeClearance=Clearance
 challengeOverScore=Break %d+
 
