--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -258,6 +258,14 @@ levelUpAwardPool=可能获得：%s
 levelUpPerkCongrat=恭喜！你获得了：技能点 X %s
 levelUpDes=分配你的天赋吧！
 
+achievements=成就
+achievementComplete=达成成就！
+incomplete=未达成
+firstComplete=首次达成
+firstCompleteDate=首次达成日期：%s
+completeTimes=达成次数：%d
+totalCount=总计：%d 个成就
+
 challengeClearance=清台
 challengeOverScore=单杆≥%d分
 
@@ -434,3 +442,65 @@ careerTrainingFree=自由训练
 
 typePlayer=玩家
 typeComputer=电脑
+
+# Achievements Category
+achCatGeneral=打球
+achCatGeneralHidden=台球生涯
+achCatFoul=犯规...
+achCatSnooker=斯诺克
+achCatPoolGeneral=花球
+achCatChineseEight=中式台球
+achCatAmericanNine=美式九球
+
+# Achievements
+# General
+achPotABall=进球
+achDesPotABall=正确打进一颗球
+achPotEightBalls=继续进球
+achDesPotEightBalls=累计打进8颗球
+achShakePocket=袋口撞烂都进不去
+achDesShakePocket=晃袋超过5下且未进球
+achGainBySnooker=斯诺克的精髓是防守
+achDesGainBySnooker=通过制造障碍球迫使对方犯规
+achCompleteLoss=一败涂地
+achDesCompleteLoss=在一球未进的情况下输掉一局
+achLostAllMatches=惨遭光头
+achDesLostAllMatches=在总局数≥5的比赛中一局未胜
+achWinAllMatches=不留情面
+achDesWinAllMatches=在总局数≥5的比赛中全胜
+achOneRoundTour=一轮游
+achDesOneRoundTour=作为种子选手在第一轮被淘汰
+achMiscued=最接近大师的一次
+achDesMiscued=呲杆
+achAnyFoul=不守规矩
+achDesAnyFoul=犯规一次
+achCueBallPot=哦豁
+achDesCueBallPot=白球落袋
+achMissedShot=规则是用母球去撞目标球
+achDesMissedShot=空杆
+achBigHeart=大心脏选手
+achDesBigHeart=赢得3次决胜局
+
+# Snooker
+achThreeMissLost=会不会玩
+achDesThreeMissLost=因为连续三次打不中目标球输掉一局
+
+# Pool general
+achPoolBreakPot=开球进球
+achDesPoolBreakPot=开球进球
+achPoolClear=一杆清台
+achDesPoolClear=一杆清台
+achPoolBreakClear=炸清
+achDesPoolBreakClear=开球并一杆清台
+achSuicide=为何想不开
+achDesSuicide=GG
+
+# Chinese eight
+achBlindShot=虾打
+achDesBlindShot=击打对手的球
+
+# American nine
+achGoldenNine=黄金九
+achDesGoldenNine=开球进九号
+achPassNine=一步到位
+achDesPassNine=传进9号球
