--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,8 +1,10 @@
 ===== 0.5.0 =====
 
 * 生涯模式更新：
+    * 成就系统
+    * 货币系统（仍处于开发中）
     * 挑战模式由通关制改为积分制
-    * 加入货币系统（仍处于开发中）
+    * 实装部分球员对于不同比赛的擅长程度
 * 物理效果更新：
     * 重新加入了只针对玩家的目标球投掷效应
     * 修改了过分夸张的弹库效果
