--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -356,6 +356,7 @@ statsFinalsOver3=决胜局(≥3)
 # About UI
 developTeam=开发团队
 developer=开发者
+artDesigner=美工
 designConsultant=设计顾问
 acknowledgements=鸣谢
 closedBetaUsers=内测玩家
