Removed unnecessary libraries
* Removed unnecessary libraries
* Bug fixes

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -14,6 +14,7 @@ confirmExitAppDes=Your progress will be saved.
 backIcon=← Back
 finishAndClose=Exit?
 finishAndCloseHint=You could also close the window manually.
+randomPlayerName=Billiards Fan %d
 
 # Entry UI
 career=Player
@@ -353,6 +354,12 @@ statsWinRate=Win rate
 statsFinalsOver3=Final frames (≥3)
 
 # About UI
+developTeam=Dev team
+developer=Developer
+artDesigner=Art designer
+designConsultant=Assistant
+acknowledgements=Acknowledgement
+closedBetaUsers=Closed beta users
 studioName=Trash software studio
 
 # Settings UI
