--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -14,6 +14,7 @@ confirmExitAppDes=游戏进度将会保存。
 backIcon=←
 finishAndClose=是否退出？
 finishAndCloseHint=您也可以稍后手动关闭窗口
+randomPlayerName=台球运动爱好者-%d
 
 # Entry UI
 career=玩家
@@ -454,12 +455,12 @@ typePlayer=玩家
 typeComputer=电脑
 
 # Achievements Category
-achCatGeneralTable=球台
+achCatGeneralTable=打打球
 achCatGeneralMatch=球局
 achCatGeneralHidden=花里胡哨
 achCatFoul=犯规...
 achCatSnooker=斯诺克
-achCatPoolGeneral=花球
+achCatPoolGeneral=撞球
 achCatChineseEight=中式台球
 achCatAmericanNine=美式九球
 achCatTour=巡回赛
@@ -567,8 +568,12 @@ achComeBackBehindOverScore=大逆转
 achDesComeBackBehindOverScore=被超分之后翻盘
 achSumBelow=菜鸡互啄
 achDesSumBelow=单局比赛双方总得分低于75分
+achSumBelow2=卧龙凤雏
+achDesSumBelow2=单局比赛双方总得分低于50分
 achSumOver147=神仙打架还是菜鸡互啄？
 achDesSumOver147=单局比赛双方总得分超过147分，且结束时分差不高于50
+achSnookerNoPot=不会玩别玩
+achDesSnookerNoPot=一局斯诺克比赛中击球5次以上，但最终取得0分的好成绩
 
 # Pool general
 achPoolBreakPot=开球进球
@@ -585,6 +590,8 @@ achBlindShot=虾打
 achDesBlindShot=击打对手的球
 achRemainOneMustLose=剩一必输
 achDesRemainOneMustLose=在对手仅剩下一颗球时，单杆连续打进4颗球以上致胜
+achChineseEightNoPot=...未来可期
+achDesChineseEightNoPot=一局中式台球比赛中击球5次以上，但最终一球未进
 
 # American nine
 achGoldenNine=黄金九
@@ -593,6 +600,8 @@ achBallWorker=打工仔
 achDesBallWorker=打进1-8号球且输掉该局
 achPassNine=一步到位
 achDesPassNine=传进9号球
+achAmericanNineNoPot=这么大的洞都打不进？
+achDesAmericanNineNoPot=一局美式九球比赛中击球4次以上，但最终一球未进
 
 # Tournaments
 achEarnedMoney=赚钱了！
