--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -145,6 +145,25 @@ aiAskReposition=AI ask to reposition
 
 askSnookerTarget=Please indicate target ball
 
+# Replay export
+replayPlay=播放
+exportAsVideo=导出为视频
+exportFrameRate=帧率
+export=导出
+exportArea=录制范围
+timeRemEst=预计剩余时间：%s
+timeUsed=已用时间：%s
+videoResolution=视频分辨率
+fileDesMp4=MPEG4视频文件
+fileSavePath=文件
+fileSelection=选择
+exportCueRange=导出范围
+cueNumFmt=第%d杆
+exportSuccess=导出成功！
+exportFailed=导出失败！
+openTargetDirAsk=是否打开视频所在位置？
+openTargetDir=打开所在文件夹
+
 # Snooker balls
 redBall=red
 yellowBall=yellow
@@ -380,6 +399,7 @@ antiAliasing=Anti aliasing
 antiAliasingDisabled=Disabled
 antiAliasingBalanced=Balanced
 performanceMode=Prediction Quality
+performanceNone=Disabled
 performanceVeryLow=Very Low
 performanceLow=Low
 performanceMedium=Medium
@@ -450,3 +470,6 @@ trainingClearColor=Color clearance
 
 typePlayer=Player
 typeComputer=Computer
+
+exportAreaFull=完整
+exportAreaGamePane=仅球桌
