--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -150,12 +150,15 @@ replayPlay=播放
 exportAsVideo=导出为视频
 exportFrameRate=帧率
 export=导出
+exportArea=录制范围
 timeRemEst=预计剩余时间：%s
 timeUsed=已用时间：%s
-videoResolution=视频分辨率
+videoResolution=视频质量
 fileDesMp4=MPEG4视频文件
 fileSavePath=文件
 fileSelection=选择
+exportCueRange=导出范围
+cueNumFmt=第%d杆
 exportSuccess=导出成功！
 exportFailed=导出失败！
 openTargetDirAsk=是否打开视频所在位置？
@@ -397,6 +400,7 @@ antiAliasing=抗锯齿
 antiAliasingDisabled=关
 antiAliasingBalanced=平衡
 performanceMode=白球预测质量
+performanceNone=无
 performanceVeryLow=极低
 performanceLow=低
 performanceMedium=中
@@ -469,6 +473,9 @@ careerTrainingFree=自由训练
 
 typePlayer=玩家
 typeComputer=电脑
+
+exportAreaFull=完整
+exportAreaGamePane=仅球桌
 
 # Achievements Category
 achCatGeneralTable=打打球
