Added more icons

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -531,7 +531,7 @@ achLongThink=塞尔比
 achDesLongThink=超过1分钟不出杆
 achFrameNoAttack=不就是喝水么
 achDesFrameNoAttack=在一局内未获得任何上手机会
-achPositioningMaster=围球大师
+achPositioningMaster=走位高手
 achDesPositioningMaster=单杆7颗球以上
 achKeyBallFail=手抖了？
 achDesKeyBallFail=关键球失误
@@ -541,7 +541,7 @@ achLegendaryRevenged=食屎级大逆转
 achDesLegendaryRevenged=在领先4局以上且到达赛点的情况下被对手翻盘
 achAccuracyWin=进攻！！！
 achDesAccuracyWin=在一场总杆数≥50杆的比赛中胜利，并保持90%以上进攻成功率
-achAccuracyWinLong=一准世上无难事
+achAccuracyWinLong=台上一准无难事
 achDesAccuracyWinLong=在一场比赛中打进8杆以上长台，并保持75%以上长台成功率
 achContinuousLongPot=走位不够，准度来凑
 achDesContinuousLongPot=一次单杆内包含3次以上长台进攻
@@ -549,6 +549,8 @@ achPotWrongColor=真的霉
 achDesPotWrongColor=斯诺克球局中，正确打进目标球时因误进其他球犯规
 achMultipleEasyFails=买了？
 achDesMultipleEasyFails=在一局比赛中打丢三颗简单球
+achFreeBallFail=回去面壁吧
+achDesFreeBallFail=自由球进攻失败
 
 # General match
 achWinAFrame=初次赢球
@@ -583,7 +585,9 @@ achSnookerBreak50=胜利的基础
 achDesSnookerBreak50=单杆得分超过50分
 achSnookerBreak100=单杆破百
 achDesSnookerBreak100=单杆得分超过100分
-achSnookerBreak147=
+achSnookerBreak100Big=大号破百
+achDesSnookerBreak100Big=单杆得分超过135分
+achSnookerBreak147=最高荣耀！
 achDesSnookerBreak147=满分杆
 achComeBackBehind65=单局逆转
 achDesComeBackBehind65=落后65分以上翻盘
@@ -615,6 +619,10 @@ achRemainOneMustLose=剩一必输
 achDesRemainOneMustLose=在对手仅剩下一颗球时，单杆连续打进4颗球以上致胜
 achChineseEightNoPot=...未来可期
 achDesChineseEightNoPot=一局中式台球比赛中击球5次以上，但最终一球未进
+achCebCumulativeClear1=中八高手
+achDesCebCumulativeClear1=累计清台5次
+achCebCumulativeClear2=中八高手2
+achDesCebCumulativeClear2=累计清台20次
 
 # American nine
 achGoldenNine=黄金九
@@ -635,8 +643,20 @@ achSecondPlace=痛失冠军
 achDesSecondPlace=获得亚军
 achBestFour=差一点点就进决赛了
 achDesBestFour=获得四强
+achPlayOneYear=一年级毕业
+achDesPlayOneYear=参加完第一年的比赛
+achPlayTwoYears=年轻选手中的翘楚
+achDesPlayTwoYears=参加比赛两年
+achPlayFiveYears=台坛中坚
+achDesPlayFiveYears=参加比赛五年
+achPlayTenYears=老资格
+achDesPlayTenYears=参加比赛十年
+achPlayTwentyYears=元老级选手
+achDesPlayTwentyYears=参加比赛二十年
 
 # Snooker tournament
+achSnookerTop64=算是职业选手了
+achDesSnookerTop64=斯诺克世界排名进入前64
 achSnookerTop16=大师
 achDesSnookerTop16=斯诺克世界排名进入前16
 achSnookerTop1=世界第一
@@ -647,3 +667,5 @@ achSnookerTripleCrown=斯诺克大满贯
 achDesSnookerTripleCrown=夺得斯诺克世锦赛、英锦赛、大师赛的冠军
 achPottingMachine=进攻机器
 achDesPottingMachine=获得赛事单杆最高
+achFirstYearWorldChampShip=亨得利+奥沙利文+希金斯=你
+achDesFirstYearWorldChampShip=在生涯第一个完整赛季打进斯诺克世界锦标赛正赛
