--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -18,15 +18,17 @@
     * 单独设置玩家1/玩家2的播放倍速
     * 显示AI的击球手
     * 球桌的抗锯齿
-* 回放录像导出
+    * 部分界面图标化
+    * 赛事安排界面的背景色
+* 回放系统更新：
+    * 录像导出为视频
+    * 修复了回放界面中的一些问题
 * 加入了完全无辅助的模式
 * 关于-开发团队
-* 加入了部分图标
 * 重构了部分屎山代码
 * bug修复：
     * 陈年旧bug：AI不进攻靠近上方库边的反角度球
     * 白球预测质量调至极低时报错的bug
-    * 修复了回放界面中的一些问题
 
 ===== 0.4.5 =====
 20230616
