--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -286,8 +286,8 @@ achievementComplete=达成成就！
 incomplete=未达成
 firstComplete=首次达成
 firstCompleteDate=首次达成日期：%s
-completeTimes=完成次数：%d
-highestRecord=最高纪录：%d
+completeTimes=累计：%d
+highestRecord=最高：%d
 totalCount=总计：%d 个成就
 
 challengeClearance=清台
@@ -496,10 +496,8 @@ achCatAmericanNineTour=美式九球巡回赛
 # General
 achPotABall=进球
 achDesPotABall=正确打进一颗球
-achPotEightBalls=基本会玩了
-achDesPotEightBalls=累计打进8颗球
-achPotHundredBalls=经验老到
-achDesPotHundredBalls=累计打进100颗球
+achPotBalls=经验老到
+achDesPotBalls=累计打进%d颗球
 achCumulativeLongPots1=至少很敢拼
 achDesCumulativeLongPots1=累计10颗次长台进攻
 achThreeBallsInARow=初窥门径
@@ -622,10 +620,8 @@ achRemainOneMustLose=剩一必输
 achDesRemainOneMustLose=在对手仅剩下一颗球时，单杆连续打进4颗球以上致胜
 achChineseEightNoPot=...未来可期
 achDesChineseEightNoPot=一局中式台球比赛中击球5次以上，但最终一球未进
-achCebCumulativeClear1=中八高手
-achDesCebCumulativeClear1=累计清台5次
-achCebCumulativeClear2=中八高手2
-achDesCebCumulativeClear2=累计清台20次
+achCebCumulativeClear=中八高手
+achDesCebCumulativeClear=累计清台%d次
 
 # American nine
 achGoldenNine=黄金九
@@ -674,10 +670,8 @@ achPottingMachine=进攻机器
 achDesPottingMachine=获得赛事单杆最高
 achFirstYearWorldChampShip=亨得利+奥沙利文+希金斯=你
 achDesFirstYearWorldChampShip=在生涯第一个完整赛季打进斯诺克世界锦标赛正赛
-achDefeatUniqueOpponentsSnooker1=混个脸熟
-achDesDefeatUniqueOpponentsSnooker1=在斯诺克巡回赛中，累计击败3名球员
-achDefeatUniqueOpponentsSnooker2=令人闻风丧胆
-achDesDefeatUniqueOpponentsSnooker2=在斯诺克巡回赛中，累计击败8名球员
+achDefeatUniqueOpponentsSnooker=威名远扬
+achDesDefeatUniqueOpponentsSnooker=在斯诺克巡回赛中，累计击败%d名球员
 achDefeatSameOpponentContinuousSnooker=怎么又是你
 achDesDefeatSameOpponentContinuousSnooker=在斯诺克巡回赛中，连续两次击败同一个对手
 achDefeatSameOpponentMultiSnooker1=克星
@@ -686,10 +680,8 @@ achDefeatSameOpponentMultiSnooker2=终极克星
 achDesDefeatSameOpponentMultiSnooker2=在斯诺克巡回赛中，面对一个交手至少10次的对手取得90%以上的胜率
 
 # Chinese eight tournaments
-achDefeatUniqueOpponentsCeb1=混个脸熟
-achDesDefeatUniqueOpponentsCeb1=在中式台球巡回赛中，累计击败3名球员
-achDefeatUniqueOpponentsCeb2=令人闻风丧胆
-achDesDefeatUniqueOpponentsCeb2=在中式台球巡回赛中，累计击败8名球员
+achDefeatUniqueOpponentsCeb=威名远扬
+achDesDefeatUniqueOpponentsCeb=在中式台球巡回赛中，累计击败%d名球员
 achDefeatSameOpponentContinuousCeb=怎么又是你
 achDesDefeatSameOpponentContinuousCeb=在中式台球巡回赛中，连续两次击败同一个对手
 achDefeatSameOpponentMultiCeb1=克星
@@ -698,10 +690,8 @@ achDefeatSameOpponentMultiCeb2=终极克星
 achDesDefeatSameOpponentMultiCeb2=在中式台球巡回赛中，面对一个交手至少10次的对手取得90%以上的胜率
 
 # American nine tournaments
-achDefeatUniqueOpponentsAmerican1=混个脸熟
-achDesDefeatUniqueOpponentsAmerican1=在美式九球巡回赛中，累计击败3名球员
-achDefeatUniqueOpponentsAmerican2=令人闻风丧胆
-achDesDefeatUniqueOpponentsAmerican2=在美式九球巡回赛中，累计击败8名球员
+achDefeatUniqueOpponentsAmerican=威名远扬
+achDesDefeatUniqueOpponentsAmerican=在美式九球巡回赛中，累计击败%d名球员
 achDefeatSameOpponentContinuousAmerican=怎么又是你
 achDesDefeatSameOpponentContinuousAmerican=在美式九球巡回赛中，连续两次击败同一个对手
 achDefeatSameOpponentMultiAmerican1=克星
