--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -120,6 +120,10 @@ aiHelpPlayerPrompt=若导致玩家输球，AI概不负责
 drawPredictionLine=White prediction line
 drawPredictionLineAi=AI prediction line
 drawPredictionLinePlayer=Player suggestion line
+displayWhiteTrace=Trace cue ball
+displayTargetTrace=Trace target
+displayAllTrace=Trace all balls
+clearAllTraces=Clear traces
 
 foul=Foul
 scoreDiff=%d difference
