--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -120,6 +120,10 @@ aiHelpPlayerPrompt=若导致玩家输球，AI概不负责
 drawPredictionLine=白球划线
 drawPredictionLineAi=AI白球划线
 drawPredictionLinePlayer=预测玩家球路
+displayWhiteTrace=显示白球踪迹
+displayTargetTrace=显示目标球踪迹
+displayAllTrace=显示所有球踪迹
+clearAllTraces=清除
 
 foul=犯规
 scoreDiff=分差 %d
