前后齿轮效应及更多成就

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -106,12 +106,12 @@ closeWindowConcede=Closing before game finishes equivalents to conceding the fra
 replaceBallInHand=Place ball in hand
 letOpponentPlay=Let opponent play
 pushOut=Push out
-playMenu=Play
+playMenu=Display
 p1PlaySpeedMenu=P1 speed
 p2PlaySpeedMenu=P2 speed
 replayLastCue=Last cue
 replayNextCue=Next cue
-replayFastForward=Fast forward
+replayFastForward=Fast-forward
 replayAutoPlay=Auto play
 aiAutoPlay=AI Auto Play
 aiHelpPlayer=AI代打
@@ -120,6 +120,7 @@ aiHelpPlayerPrompt=若导致玩家输球，AI概不负责
 drawPredictionLine=White prediction line
 drawPredictionLineAi=AI prediction line
 drawPredictionLinePlayer=Player suggestion line
+potInspectionTool=Inspection
 displayWhiteTrace=Trace cue ball
 displayTargetTrace=Trace target
 displayAllTrace=Trace all balls
