--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -52,11 +52,11 @@ difEasy=简单
 difMedium=中等
 difHard=难
 
-aiGoodNoob=菜
-aiGoodBad=较差
+aiGoodNoob=菜鸡
+aiGoodBad=业余
 aiGoodNormal=正常
-aiGoodGood=较强
-aiGoodExtreme=极强
+aiGoodGood=强
+aiGoodExtreme=开挂
 
 # Ability UI
 catProf=职业选手
@@ -106,7 +106,7 @@ closeWindowConcede=关闭游戏视作本局认输
 replaceBallInHand=重新放置手中球
 letOpponentPlay=让杆
 pushOut=推球
-playMenu=播放
+playMenu=显示
 p1PlaySpeedMenu=P1倍速
 p2PlaySpeedMenu=P2倍速
 replayLastCue=上一杆
@@ -120,9 +120,10 @@ aiHelpPlayerPrompt=若导致玩家输球，AI概不负责
 drawPredictionLine=白球划线
 drawPredictionLineAi=AI白球划线
 drawPredictionLinePlayer=预测玩家球路
-displayWhiteTrace=显示白球踪迹
-displayTargetTrace=显示目标球踪迹
-displayAllTrace=显示所有球踪迹
+potInspectionTool=下球观察工具
+displayWhiteTrace=显示白球轨迹
+displayTargetTrace=显示目标球轨迹
+displayAllTrace=显示所有球轨迹
 clearAllTraces=清除
 
 foul=犯规
@@ -483,6 +484,7 @@ exportAreaFull=完整
 exportAreaGamePane=仅球桌
 
 # Achievements Category
+achCatUniqueDefeats=手下败将
 achCatGeneralTable=打打球
 achCatGeneralMatch=球局
 achCatGeneralHidden=花里胡哨
@@ -516,6 +518,14 @@ achGainBySnooker=斯诺克的精髓是防守
 achDesGainBySnooker=通过制造障碍球迫使对方犯规
 achSolveSnookerSuccess=成功解球
 achDesSolveSnookerSuccess=在对方制造障碍球之后成功解到目标球
+achSolveSnookerSuccessPot=解进了
+achDesSolveSnookerSuccessPot=在对方制造障碍球之后成功解到目标球并且进球
+achPotTwoLegal=一箭双雕
+achDesPotTwoLegal=在一次击球中，成功打进两颗球
+achPotThreeLegal=一杆三响
+achDesPotThreeLegal=在一次击球中，成功打进三颗球以上
+achDoublePot=翻袋进球
+achDesDoublePot=累计翻袋进球%d次
 achAroundTablePosition=绕台走位
 achDesAroundTablePosition=白球撞击至少两次边库和一次底库后，成功打进下一颗目标球
 achMultiCushionPosition1=四库走位
@@ -612,17 +622,23 @@ achDesComeBackBehind65=落后65分以上翻盘
 achComeBackBehindOverScore=大逆转
 achDesComeBackBehindOverScore=被超分之后翻盘
 achSumBelow=菜鸡互啄
-achDesSumBelow=单局比赛双方总得分低于75分
+achDesSumBelow=双方总得分加上台面剩余分数低于75分
 achSumBelow2=卧龙凤雏
-achDesSumBelow2=单局比赛双方总得分低于50分
+achDesSumBelow2=双方总得分加上台面剩余分数低于50分
 achSumOver147=神仙打架还是菜鸡互啄？
 achDesSumOver147=单局比赛双方总得分超过147分，且结束时分差不高于50
 achSnookerNoPot=不会玩别玩
 achDesSnookerNoPot=一局斯诺克比赛中击球5次以上，但最终取得0分的好成绩
+achNotRespect=你不尊重我！
+achDesNotRespect=在斯诺克比赛中，使用超过70%的力度解球
 
 # Pool general
-achPoolBreakPot=开球进球
+achPoolBreakPot=成功的开球
 achDesPoolBreakPot=开球进球
+achPoolBreakMaster=开球专家
+achDesPoolBreakMaster=开球进球两颗以上
+achDoublePotWin=翻袋致胜
+achDesDoublePotWin=翻袋打进致胜球
 achPoolClear=一杆清台
 achDesPoolClear=一杆清台
 achPoolBreakClear=炸清
@@ -633,6 +649,8 @@ achDesSuicide=因为犯规输掉一局
 # Chinese eight
 achBlindShot=虾打
 achDesBlindShot=击打对手的球
+achPotOpponentBall=活雷锋
+achDesPotOpponentBall=在不犯规的前提下，打进对手的球
 achRemainOneMustLose=剩一必输
 achDesRemainOneMustLose=在对手仅剩下一颗球时，单杆连续打进4颗球以上致胜
 achChineseEightNoPot=...未来可期
@@ -717,3 +735,7 @@ achDefeatSameOpponentMultiAmerican1=克星
 achDesDefeatSameOpponentMultiAmerican1=在美式九球巡回赛中，面对一个对手取得三胜零负的战绩
 achDefeatSameOpponentMultiAmerican2=终极克星
 achDesDefeatSameOpponentMultiAmerican2=在美式九球巡回赛中，面对一个交手至少10次的对手取得90%以上的胜率
+
+# Unique defeats
+achUniqueDefeat=击败过%s
+achDesUniqueDefeat=
