--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -9,8 +9,13 @@
     * AI代打
 * 物理效果更新：
     * 重新加入了只针对玩家的目标球投掷效应
+    * 加入了碰撞时的前后旋转传递
     * 修改了过分夸张的弹库效果
     * 修改了过分夸张的侧旋加速效果
+    * 修改了高杆补偿的强度
+* 功能更新：
+    * 可显示球的轨迹
+    * 下球观察工具
 * AI优化：
     * AI决定击球力度时将会考虑球桌台尼的变线情况
     * 调整了进球概率估算中的一些参数
@@ -24,12 +29,13 @@
     * 录像导出为视频
     * 修复了回放界面中的一些问题
 * 加入了完全无辅助的模式
-* 加入了显示球的轨迹
 * 关于-开发团队
+* 在开发者模式下进行的快速游戏将不再录入数据库
 * 重构了部分屎山代码
 * bug修复：
     * 陈年旧bug：AI不进攻靠近上方库边的反角度球
     * 白球预测质量调至极低时报错的bug
+    * 生涯模式球员名字编码长度超过32字节引发的问题
 
 ===== 0.4.5 =====
 20230616
