--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -51,6 +51,7 @@ difEasiest=Easiest
 difEasy=Easy
 difMedium=Medium
 difHard=Hard
+difExtreme=Extreme
 
 aiGoodNoob=Noob
 aiGoodBad=Weak
@@ -101,6 +102,10 @@ aiCueText=AI Cue
 aiThinking=Thinking
 gameMenu=Game
 settingsMenu=Settings
+repairMenu=Stuck release
+repairDes=Used only when game stuck. This operation could cause further bugs.
+repairAiCalculating=AI正在运算，并非卡死，请耐心等待
+repairFailed=无法正确脱离卡死，已启用击球键，但接下来的游戏可能错误
 withdraw=Concede
 closeWindowConcede=Closing before game finishes equivalents to conceding the frame
 replaceBallInHand=Place ball in hand
@@ -117,6 +122,7 @@ aiAutoPlay=AI Auto Play
 aiHelpPlayer=AI代打
 aiHelpPlayerTitle=AI将会代替玩家击球
 aiHelpPlayerPrompt=若导致玩家输球，AI概不负责
+aiHelpPlayerUnavailable=无辅助/极难模式下AI不能代打
 drawPredictionLine=White prediction line
 drawPredictionLineAi=AI prediction line
 drawPredictionLinePlayer=Player suggestion line
@@ -291,7 +297,8 @@ achievementComplete=成就
 incomplete=未达成
 firstComplete=首次达成
 firstCompleteDate=首次达成日期：%s
-completeTimes=达成次数: %d
+completeTimes=累计：%d
+highestRecord=最高：%d
 totalCount=总计：%d 个成就
 
 challengeClearance=Clearance
@@ -331,6 +338,7 @@ continueMatch=Continue match
 performAllMatches=Perform all
 quitTournament=Quit tournament
 quitTournamentConfirmation=Are you sure to quit?
+quitTournamentDes=Unfinished matches will be given up
 undetermined=N/A
 congratSentence=Captures the {rank} of {match}!
 notCongratSentence=Knocked out in the {rank} stage of {match}!
@@ -357,7 +365,7 @@ highestBreak=Highest break
 single50=50+ breaks
 single100=100+ breaks
 single147=Maximum breaks
-numBreaks=开球次数
+numBreaks=Breaks
 numBreaksSuc=开球进球次数
 breaksSucRatio=开球成功率
 breakClears=炸清
@@ -374,6 +382,7 @@ boNStats=%d matches, %d wins
 queryRecords=Query records
 statsMatchesTitle=场次
 statsMatchesWinTitle=Wins
+statsFramesWinTitle=Frame wins
 statsWinRate=Win rate
 statsFinalsOver3=Final frames (≥3)
 
@@ -472,6 +481,8 @@ trainingSnakeX=Routine-X
 trainingSnakeHullOrdered=Ordered routine-full
 trainingSnakeHalfOrdered=Ordered routine-half
 trainingClearColor=Color clearance
+
+careerTrainingFree=Free training
 
 typePlayer=Player
 typeComputer=Computer
