--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -6,6 +6,7 @@
     * 挑战模式由通关制改为积分制
     * 实装了美式九球赛事（目前仅实装较少比赛）
     * 实装部分球员对于不同比赛的擅长程度
+    * 中途调整难度
     * AI代打
 * 物理效果更新：
     * 重新加入了只针对玩家的目标球投掷效应
@@ -29,6 +30,7 @@
     * 录像导出为视频
     * 修复了回放界面中的一些问题
 * 加入了完全无辅助的模式
+* 加入了脱离卡死的选项
 * 关于-开发团队
 * 在开发者模式下进行的快速游戏将不再录入数据库
 * 重构了部分屎山代码
@@ -36,6 +38,7 @@
     * 陈年旧bug：AI不进攻靠近上方库边的反角度球
     * 白球预测质量调至极低时报错的bug
     * 生涯模式球员名字编码长度超过32字节引发的问题
+    * 斯诺克白球落袋且miss不算无意识救球的问题
 
 ===== 0.4.5 =====
 20230616
