--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
@@ -190,6 +190,8 @@ achDesCebCumulativeClear=累计清台%d次
 # American nine
 achGoldenNine=黄金九
 achDesGoldenNine=开球进九号
+achWhiteGoldenNine=白金九
+achDesWhiteGoldenNine=开球犯规但进了九号
 achBallWorker=打工仔
 achDesBallWorker=打进1-8号球且输掉该局
 achPassNine=一步到位
