--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -216,6 +216,7 @@ illegalBreak=Illegal break
 breakFoulDes=Only %d balls touch cushion
 flyOutTable=Ball out of table
 targetXHitYNumbered=Target is number %s, but number %s hit
+potNineWhilePushing=Nine potted while pushing out
 
 challengeSuccess=挑战成功！
 challengeFailed=挑战失败！
