--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -216,6 +216,7 @@ illegalBreak=开球违例
 breakFoulDes=仅有%d颗球碰边
 flyOutTable=有球飞出台面
 targetXHitYNumbered=目标球为%d号球，但击打了%d号球
+potNineWhilePushing=推球时进了九号球
 
 challengeSuccess=挑战成功！
 challengeFailed=挑战失败！
