--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,4 +1,8 @@
+===== 0.5.1 =====
+
+
 ===== 0.5.0 =====
+20230905
 
 * 生涯模式更新：
     * 成就系统
@@ -39,6 +43,8 @@
     * 白球预测质量调至极低时报错的bug
     * 生涯模式球员名字编码长度超过32字节引发的问题
     * 斯诺克白球落袋且miss不算无意识救球的问题
+    * 九球默认打杆为冲杆的问题
+    * 九球开球犯规但进了九号判负的问题
 
 ===== 0.4.5 =====
 20230616
