--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,7 +1,10 @@
 ===== 0.5.1 =====
 
+* AI翻袋
+* AI进攻多线程运算优化
 * Bug修复：
     * 生涯成就统计时，将生涯主球员的快速游戏内参加的比赛也计入的问题
+    * 整百数的钱（000）显示为0的问题
 
 ===== 0.5.0 =====
 20230905
