--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -410,6 +410,7 @@ minimumResolution= (Minimum)
 language=Language
 replayCompression=Replay compression
 frameRate=Frame rate limit
+productionFrameRate=Recording frame rate
 antiAliasing=Anti aliasing
 antiAliasingDisabled=Disabled
 antiAliasingBalanced=Balanced
