--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -410,6 +410,7 @@ minimumResolution=（最低推荐分辨率）
 language=语言
 replayCompression=游戏录像压缩
 frameRate=帧率上限
+productionFrameRate=录像帧率
 antiAliasing=抗锯齿
 antiAliasingDisabled=关
 antiAliasingBalanced=平衡
