--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -2,8 +2,14 @@
 
 * AI翻袋
 * AI进攻多线程运算优化
+* AI打底袋的力度优化
+* 加入了白球与第一目标球的二次碰撞检测
+* 界面优化：
+    * 赛程界面缩放
 * Bug修复：
+    * 左下方库边加塞效果不正确的问题
     * 生涯成就统计时，将生涯主球员的快速游戏内参加的比赛也计入的问题
+    * 球员记录中局数计为全部打满的bug
     * 整百数的钱（000）显示为0的问题
 
 ===== 0.5.0 =====
