--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -463,6 +463,7 @@ poolTable9=Pool Table 9'
 poolTable8=Home Table 8'
 poolTable7=Bar Box 7'
 poolTable6=Smaller Bar Box 6'
+russianTable=Russian
 pocketHuge=Huge
 pocketLarge=Large
 pocketStd=Standard
