--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -463,6 +463,7 @@ poolTable9=美式九球台 9'
 poolTable8=家用球桌 8'
 poolTable7=酒吧球桌 7'
 poolTable6=小号酒吧球桌 6'
+russianTable=俄式球桌
 pocketHuge=特大
 pocketLarge=加大
 pocketStd=标准
