--- a/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
+++ b/src/main/resources/trashsoftware/trashSnooker/doc/changelog.txt
@@ -1,6 +1,10 @@
 ===== 0.5.1 =====
 
 * AI翻袋
+* 中八和九球的AI自由球改进：
+    * 先判断目标球
+    * 拆分为两步
+    * 中八优先解决难度球
 * AI进攻多线程运算优化
 * AI打底袋的力度优化
 * 加入了白球与第一目标球的二次碰撞检测
