3D cue model backup

--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Achievements_zh.properties
@@ -62,6 +62,8 @@ achOneRoundTour=一轮游
 achDesOneRoundTour=首轮出局
 achMiscued=最接近大师的一次
 achDesMiscued=呲杆
+achMiscuePot=出杆很直
+achDesMiscuePot=虽然呲杆了但还是打进了
 achAnyFoul=不守规矩
 achDesAnyFoul=犯规一次
 achCueBallPot=哦豁
