--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_en.properties
@@ -244,9 +244,15 @@ rankNChamps=Seasonal Champions
 continueTour=Continue
 tourInProgress=In progress
 nextTour=Next event
-enrol=Enrol
+enrol=Register
 start=Start
 skip=Skip
+fees=Fees
+registryFee=Registry Fee
+flightFee=Flight Fee
+hotelFee=Accommodation Fee
+travelFee=Travel Fee
+totalFee=Total
 achievementsOf=Achievements of %s
 bestAnyScore=Best score: 
 bestRankedScore=Best in ranked tournaments: 
