--- a/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
+++ b/src/main/resources/trashsoftware/trashSnooker/bundles/Strings_zh.properties
@@ -247,6 +247,12 @@ nextTour=下项赛事
 enrol=报名
 start=开始
 skip=跳过
+fees=费用
+registryFee=报名费
+flightFee=交通费
+hotelFee=住宿费
+travelFee=参赛支出
+totalFee=合计
 achievementsOf=%s成绩
 bestAnyScore=最佳成绩：
 bestRankedScore=排名赛最佳成绩：
